# rust-performance-bible

./: .gitignore  Cargo.toml  README.md
.github/workflows/: WORKFLOWS.md  benchmark-dashboard.yml  benchmark.yml  pr-benchmark.yml  static.yml
benchmarks/: BENCHMARK_ALGORITHM.md  Cargo.toml  lib.rs
benchmarks/benches/: memory_patterns.rs
book/: 001-memory-is-not-free.md  CHAPTERS.md
book/001-memory-is-not-free/: BENCHMARK.md
book/001-memory-is-not-free/bench-logs/: BENCH_LOG_08072025.md  BENCH_LOG_09072025.md
book/001-memory-is-not-free/code/: naive.rs  optimized.rs
dashboard-generator/: Cargo.toml
dashboard-generator/dashboard/: README.md  index.html
dashboard-generator/src/: main.rs
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/donate/: index.html
gists/: zero_alloc_json.rs
patterns/memory/: memory_pool.rs
scripts/: setup-github-actions.sh
soundtrack/: CRABCORE_PLAYLIST.md
