[workspace]
members = [
    "benchmarks",
    "dashboard-generator",
]
resolver = "2"

exclude = [
    "**/target",
    "**/Cargo.lock",
    "**/*.rs.bk"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
publish = false

[workspace.dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
