[package]
name = "rust-performance-benchmarks"
version.workspace = true
edition.workspace = true
description = "Benchmarks for the Rust Performance Bible"

[lib]
path = "lib.rs"

[[bench]]
name = "memory_patterns"
harness = false

[dev-dependencies]
criterion.workspace = true

[profile.bench]
debug = true  # Keep debug symbols for profiling