[package]
name = "dashboard-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
